--- a/scss/style.scss
+++ b/scss/style.scss
@@ -11,6 +11,10 @@ body {
       line-height: 24px;
 }
 
+.fw-bold {
+      font-weight: 700;
+}
+
 .wrapper {
       min-height: 100%;
       padding: 20px;
