--- a/css/style.css
+++ b/css/style.css
@@ -370,6 +370,10 @@ body {
   text-transform: capitalize;
 }
 
+a {
+  color: #fafafa;
+}
+
 .header {
   position: relative;
   min-height: 65px;
@@ -1275,6 +1279,7 @@ body {
 }
 
 .blog__description {
+  display: block;
   font-family: "OpenSans-Regular", sans-serif;
   font-weight: 400;
   text-align: justify;
@@ -1313,6 +1318,12 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+.contact-form__tip {
+  color: rgba(250, 250, 250, 0.4);
+  text-align: center;
+  font-size: 12px;
 }
 
 @media (min-width: 1185px) {
@@ -1520,4 +1531,76 @@ body {
   padding: 30px 0 0 0;
   margin: 0 auto;
   opacity: 0.5;
+}
+
+.personal-blog {
+  background: #303030;
+  color: #fafafa;
+}
+
+.personal-blog__subtitle {
+  opacity: 0.6;
+}
+
+.personal-blog__description {
+  font-size: 18px;
+  letter-spacing: 0.25px;
+}
+
+.personal-blog__image {
+  background: rgba(0, 0, 0, 0.65);
+  opacity: 0.7;
+  -webkit-box-shadow: 0px 0px 5px 1px #fafafa;
+          box-shadow: 0px 0px 5px 1px #fafafa;
+  position: relative;
+  width: 100%;
+  padding: 40% 0 0 0;
+}
+
+.personal-blog__image:hover {
+  opacity: 1;
+}
+
+.personal-blog__image img {
+  position: absolute;
+  width: 90%;
+  height: 100%;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.personal-blog__images {
+  display: relative;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 0 auto 30px;
+}
+
+.personal-blog__images a {
+  display: block;
+  width: 100%;
+  margin: 0 0 30px 0;
+}
+
+@media (min-width: 728px) {
+  .personal-blog__images a {
+    display: block;
+    width: 49%;
+    margin: 0;
+  }
 }
